chore(docker): set up for docker
